--- a/family.html
+++ b/family.html
@@ -25,10 +25,10 @@
 	<main>
 		<p>In 2016 I loaded my kids into the minivan and took them on a drive across the Northern midwest states.  We went to Wisconsin Dells, the Badlands, Mount Rushmore, Jewel Cave, and Custer State Park.<br>
 			<img src = "images/wisconsin_dells.jpg" width="25" alt = "A boy and two girls in zip line gear posing in front of sign for Sasquatch Lake">
-			<img src = "images/badlands.jpg" width="1000" alt="">
-			<img src="images/falling.jpg" width="25" alt="">
-			<img src = "images/rushmore.jpg" width="1000" alt = "">
-			<img src = "images/jewel_cave.JPG" width="25" alt="">
+			<img src = "images/badlands.jpg" width="1000" alt="Badlands rock formations in South Dakota">
+			<img src="images/falling.jpg" width="25" alt="Child pretending to fall during the trip">
+			<img src = "images/rushmore.jpg" width="1000" alt="Mount Rushmore monument with four presidents">
+			<img src = "images/jewel_cave.JPG" width="25" alt="Jewel Cave interior with rock formations">
 		<p>I didn't plan for the fact that the Strugis Motorcycle rally would overlap with our trip.  Many towns were closed to through traffic and the lack of internet required that we use paper maps. Often.</p>
 	</main>
 
