--- a/family.html
+++ b/family.html
@@ -13,8 +13,8 @@
 	<header>
 	  <nav>
 		<ul>
-			<li><a href = "index.html">About Me</a></li>
-			<li class="active"><a href = "family.html">My Family</a></li>
+			<li class="active"><a href = "index.html">About Me</a></li>
+			<li><a href = "family.html">My Family</a></li>
 			<li><a href = "random.html">Random Stuff</a></li>
 			<li><a href = "http://www.si.umich.edu">UMSI</a></li>
 		</ul>
